--- a/src/interfaz/MenuPrincipal.form
+++ b/src/interfaz/MenuPrincipal.form
@@ -34,7 +34,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="136" y="37" width="-1" height="-1"/>
+          <AbsoluteConstraints x="136" y="37" width="250" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -55,6 +55,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Carga De Preguntas En Forma Colectiva"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CargaColectivaActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="30" y="230" width="350" height="-1"/>
